--- a/SkipTheDishesTechChallenge/Base.lproj/Main.storyboard
+++ b/SkipTheDishesTechChallenge/Base.lproj/Main.storyboard
@@ -157,6 +157,9 @@
                                                 <constraint firstItem="Jj4-D7-Qjw" firstAttribute="top" secondItem="cHv-4E-p89" secondAttribute="topMargin" constant="8" id="bXe-5R-dv8"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="Jj4-D7-Qjw" secondAttribute="trailing" constant="8" id="hQr-Nd-DRj"/>
                                             </constraints>
+                                            <connections>
+                                                <outletCollection property="gestureRecognizers" destination="wNL-WE-LAf" id="FZW-PA-DT2"/>
+                                            </connections>
                                         </tableViewCellContentView>
                                         <connections>
                                             <segue destination="F56-le-tNF" kind="show" trigger="accessoryAction" id="lFD-SY-xIp"/>
@@ -311,67 +314,67 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZuS-sq-DJH">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="40" width="375" height="44"/>
                                 <items>
                                     <navigationItem title="Register" id="xUQ-TE-71T"/>
                                 </items>
                             </navigationBar>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dJF-Xp-E05">
-                                <rect key="frame" x="40" y="124" width="295" height="30"/>
+                                <rect key="frame" x="40" y="164" width="295" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HyE-oJ-fMX">
-                                <rect key="frame" x="40" y="99" width="295" height="21"/>
+                                <rect key="frame" x="40" y="139" width="295" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="abE-3g-I1u">
-                                <rect key="frame" x="40" y="214" width="295" height="30"/>
+                                <rect key="frame" x="40" y="254" width="295" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I1k-8m-ZkO">
-                                <rect key="frame" x="40" y="189" width="295" height="21"/>
+                                <rect key="frame" x="40" y="229" width="295" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yfS-eT-GC3">
-                                <rect key="frame" x="40" y="304" width="295" height="30"/>
+                                <rect key="frame" x="40" y="344" width="295" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jci-u0-F3Q">
-                                <rect key="frame" x="40" y="279" width="295" height="21"/>
+                                <rect key="frame" x="40" y="319" width="295" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hyw-HP-YHb">
-                                <rect key="frame" x="40" y="394" width="295" height="30"/>
+                                <rect key="frame" x="40" y="434" width="295" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Passwrod" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jyS-xN-c2U">
-                                <rect key="frame" x="40" y="369" width="295" height="21"/>
+                                <rect key="frame" x="40" y="409" width="295" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="auc-0k-cfe">
-                                <rect key="frame" x="40" y="457" width="295" height="30"/>
+                                <rect key="frame" x="40" y="497" width="295" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Repeat Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c4J-PI-0vg">
-                                <rect key="frame" x="40" y="432" width="295" height="21"/>
+                                <rect key="frame" x="40" y="472" width="295" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -421,7 +424,7 @@
                             <constraint firstItem="dJF-Xp-E05" firstAttribute="trailing" secondItem="HyE-oJ-fMX" secondAttribute="trailing" id="rAd-ap-hQw"/>
                             <constraint firstItem="abE-3g-I1u" firstAttribute="leading" secondItem="I1k-8m-ZkO" secondAttribute="leading" id="rNb-Ch-UdI"/>
                             <constraint firstItem="ZuS-sq-DJH" firstAttribute="leading" secondItem="dac-tt-C2F" secondAttribute="leading" id="tL0-Ep-wG4"/>
-                            <constraint firstItem="ZuS-sq-DJH" firstAttribute="top" secondItem="Vxw-dL-eGl" secondAttribute="top" id="uc4-eP-CO4"/>
+                            <constraint firstItem="ZuS-sq-DJH" firstAttribute="top" secondItem="Vxw-dL-eGl" secondAttribute="top" constant="40" id="uc4-eP-CO4"/>
                             <constraint firstItem="Jci-u0-F3Q" firstAttribute="top" secondItem="abE-3g-I1u" secondAttribute="bottom" constant="35" id="v9H-ND-4OV"/>
                             <constraint firstItem="auc-0k-cfe" firstAttribute="trailing" secondItem="c4J-PI-0vg" secondAttribute="trailing" id="yyW-ia-uAr"/>
                             <constraint firstItem="hyw-HP-YHb" firstAttribute="leading" secondItem="jyS-xN-c2U" secondAttribute="leading" id="zPD-cD-95S"/>
@@ -443,7 +446,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dish's Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mR0-Dr-hIj">
-                                <rect key="frame" x="24" y="68" width="327" height="27"/>
+                                <rect key="frame" x="24" y="108" width="327" height="27"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="75" id="jic-wE-uNM"/>
                                 </constraints>
@@ -452,25 +455,25 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CRX-wL-bSs">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="40" width="375" height="44"/>
                                 <items>
                                     <navigationItem title="Details" id="7Hc-tR-Wl1"/>
                                 </items>
                             </navigationBar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ingredients in Details" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bvo-Gt-4MH">
-                                <rect key="frame" x="32" y="101" width="311" height="21"/>
+                                <rect key="frame" x="32" y="141" width="311" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="82F-bD-woK">
-                                <rect key="frame" x="32" y="154" width="311" height="130"/>
+                                <rect key="frame" x="32" y="194" width="311" height="130"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="130" id="1ib-7p-uh2"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s3f-Mj-5Uy">
-                                <rect key="frame" x="0.0" y="316" width="375" height="50"/>
+                                <rect key="frame" x="0.0" y="356" width="375" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Place your order" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oqf-XQ-jpm">
                                         <rect key="frame" x="80.5" y="7.5" width="215" height="36"/>
@@ -487,19 +490,19 @@
                                 </constraints>
                             </view>
                             <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="2yk-rq-KNm">
-                                <rect key="frame" x="265" y="416" width="94" height="29"/>
+                                <rect key="frame" x="265" y="456" width="94" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="94" id="SHR-RQ-tHg"/>
                                 </constraints>
                             </stepper>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Order Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yYH-R5-Zoy">
-                                <rect key="frame" x="32" y="382" width="93.5" height="21"/>
+                                <rect key="frame" x="32" y="422" width="93.5" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CAD 19,99" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Bw-j2-WOn">
-                                <rect key="frame" x="265" y="483" width="94" height="21"/>
+                                <rect key="frame" x="265" y="523" width="94" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="94" id="CQN-e4-x54"/>
                                 </constraints>
@@ -508,13 +511,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="01" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HWV-Xs-2mC">
-                                <rect key="frame" x="301" y="382" width="20" height="23"/>
+                                <rect key="frame" x="301" y="422" width="20" height="23"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i7E-QX-Ic0">
-                                <rect key="frame" x="32" y="483" width="39" height="21"/>
+                                <rect key="frame" x="32" y="523" width="39" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -525,7 +528,7 @@
                             <constraint firstItem="mR0-Dr-hIj" firstAttribute="leading" secondItem="Ihp-b8-6Q8" secondAttribute="leading" constant="24" id="1BE-1J-3Wv"/>
                             <constraint firstItem="mR0-Dr-hIj" firstAttribute="top" secondItem="CRX-wL-bSs" secondAttribute="bottom" constant="24" id="4bj-YO-We1"/>
                             <constraint firstItem="Ihp-b8-6Q8" firstAttribute="trailing" secondItem="2yk-rq-KNm" secondAttribute="trailing" constant="16" id="7eO-Da-soV"/>
-                            <constraint firstItem="CRX-wL-bSs" firstAttribute="top" secondItem="LCK-7p-bmh" secondAttribute="top" id="BAJ-iv-NLq"/>
+                            <constraint firstItem="CRX-wL-bSs" firstAttribute="top" secondItem="LCK-7p-bmh" secondAttribute="top" constant="40" id="BAJ-iv-NLq"/>
                             <constraint firstItem="Ihp-b8-6Q8" firstAttribute="trailing" secondItem="82F-bD-woK" secondAttribute="trailing" constant="32" id="BnB-0R-iKi"/>
                             <constraint firstItem="i7E-QX-Ic0" firstAttribute="top" secondItem="yYH-R5-Zoy" secondAttribute="bottom" constant="80" id="COK-IA-7Nj"/>
                             <constraint firstItem="s3f-Mj-5Uy" firstAttribute="leading" secondItem="Ihp-b8-6Q8" secondAttribute="leading" id="CxA-4B-eVp"/>
